install libfreetype.so.6

--- a/test-image/Containerfile
+++ b/test-image/Containerfile
@@ -1,2 +1,4 @@
 FROM registry.access.redhat.com/ubi9/ubi:9.1.0
-RUN dnf install -q -y procps-ng-3.3.17-11.el9.x86_64
+RUN dnf install -q -y \
+    procps-ng-3.3.17-11.el9.x86_64 \
+    freetype-2.10.4-9.el9.x86_64
