cover both /ansys_inc and /usr/ansys_inc

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,16 +3,18 @@ services:
     build:
       context: test-image
     volumes:
-      - ansys_inc:/usr/ansys_inc
+      - ansys_inc:/ansys_inc
+      - usr_ansys_inc:/usr/ansys_inc
       - ./AnsysLicenseManager/:/AnsysLicenseManager/:ro,Z
       - ./run-install.bash:/run-install.bash:ro,Z
     working_dir: /AnsysLicenseManager/linx64
     command: |
       bash -c '
         ./INSTALL -silent -lm
-        head -v -n20 /usr/ansys_inc/*.err
-        tail -v -n10 /usr/ansys_inc/*.log
+        head -v -n20 /ansys_inc/*.err /usr/ansys_inc/*.err
+        tail -v -n10 /ansys_inc/*.log /usr/ansys_inc/*.log
       '
 
 volumes:
   ansys_inc:
+  usr_ansys_inc:
