--- a/test-image/Containerfile
+++ b/test-image/Containerfile
@@ -5,4 +5,5 @@ RUN dnf install -q -y \
     freetype-2.10.4-9.el9.x86_64 \
     libSM-1.2.3-10.el9.x86_64 \
     libXrender-0.9.10-16.el9.x86_64 \
+    fontconfig-2.14.0-2.el9_1.x86_64 \
  && dnf clean all
