--- a/test-image/Containerfile
+++ b/test-image/Containerfile
@@ -1,10 +1,21 @@
 FROM registry.access.redhat.com/ubi9/ubi:9.1.0
+
+# Keep dnf metadata in image build cache
 RUN dnf makecache
+
+# The INSTALL script complains about not finding `ps`
+# but it seems to go on without it.
 RUN dnf install -q -y \
-    procps-ng-3.3.17-11.el9.x86_64 \
+    procps-ng-3.3.17-11.el9.x86_64
+
+# Install shared libraries required by `ansyslm_config`
+RUN dnf install -q -y \
     freetype-2.10.4-9.el9.x86_64 \
     libSM-1.2.3-10.el9.x86_64 \
     libXrender-0.9.10-16.el9.x86_64 \
     fontconfig-2.14.0-2.el9_1.x86_64 \
     libXext-1.3.4-8.el9.x86_64 \
  && dnf clean all
+
+# Add symlink since RHEL 9 does not include LSB
+RUN ln -sv ld-linux-x86-64.so.2 /lib64/ld-lsb-x86-64.so.3
