show lmutil version

--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,7 @@ services:
         ./INSTALL -silent -LM
         head -v -n20 /ansys_inc/*.err /usr/ansys_inc/*.err
         tail -v -n10 /ansys_inc/*.log /usr/ansys_inc/*.log
+        (cd /ansys_inc/v232/licensingclient/linx64 && ./lmutil lmver lmutil)
       '
 
 volumes:
