--- a/rpmbuild-image/Containerfile
+++ b/rpmbuild-image/Containerfile
@@ -8,13 +8,17 @@ RUN dnf install -q -y \
     rpm-build-4.16.1.3-22.el9.x86_64 \
     rpmdevtools-9.5-1.el9.noarch \
     rpmlint-1.11-19.el9.noarch \
-    rsync-3.2.3-19.el9.x86_64 \
  && dnf clean all
 
-VOLUME [ "/root/rpmbuild" ]
-VOLUME [ "/rpmspecs" ]
-VOLUME [ "/rpmsources" ]
-VOLUME [ "/rpmoutputs" ]
+RUN rpmdev-setuptree \
+ && mkdir /root/rpmbuild/BUILDROOT
+
+VOLUME [ "/root/rpmbuild/BUILD" ]
+VOLUME [ "/root/rpmbuild/BUILDROOT" ]
+VOLUME [ "/root/rpmbuild/RPMS" ]
+VOLUME [ "/root/rpmbuild/SOURCES" ]
+VOLUME [ "/root/rpmbuild/SPECS" ]
+VOLUME [ "/root/rpmbuild/SRPMS" ]
 
 COPY buildspecs.bash /buildspecs.bash
 RUN chmod +x /buildspecs.bash
