--- a/rpminputs/ansyslmd-lmgrd.service
+++ b/rpminputs/ansyslmd-lmgrd.service
@@ -6,8 +6,8 @@ After=network.target
 Type=simple
 User=ansyslmd
 WorkingDirectory=/run/ansyslmd
-EnvironmentFile=-/etc/sysconfig/ansyslmd.conf
-ExecStart=/usr/ansys_inc/shared_files/licensing/linx64/lmgrd -z
+EnvironmentFile=-/etc/sysconfig/ansyslmd
+ExecStart=/usr/ansys_inc/shared_files/licensing/linx64/lmgrd -z -x lmdown
 SuccessExitStatus=15
 Restart=on-abnormal
 RestartSec=30
